--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -1,4 +1,5 @@
-﻿@using iBlogs.Site.Core.Extensions
+﻿@using System.Net.Http
+@using iBlogs.Site.Core.Extensions
 @using iBlogs.Site.Core.Service.Common
 @inject IViewService ViewService
 <!DOCTYPE html>
@@ -20,11 +21,11 @@
     <link href="@ViewService.theme_url("/static/css/style.min.css")" rel="stylesheet">
     @if (ViewService.allow_cloud_CDN() == "true")
     {
-    <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+        <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
     }
     else
     {
-    <script src="/static/admin/plugins/jquery/3.2.1/jquery.min.js"></script>
+        <script src="/static/admin/plugins/jquery/3.2.1/jquery.min.js"></script>
     }
 
     <script src="@ViewService.theme_url("/static/js/highlight.min.js")"></script>
@@ -35,13 +36,13 @@
         <div class="navbar-container">
             <a href="@ViewService.site_url()" class="navbar-logo">
                 @if (@ViewService.theme_option("logo_url").IsNullOrWhiteSpace())
-            {
-                <img src="@ViewService.theme_url("/static/img/logo.png")" alt="@ViewService.site_title()" />
-            }
-            else
-            {
-                <img src="@ViewService.theme_option("logo_url")" alt="@ViewService.site_title()" />
-            }
+                {
+                    <img src="@ViewService.theme_url("/static/img/logo.png")" alt="@ViewService.site_title()" />
+                }
+                else
+                {
+                    <img src="@ViewService.theme_option("logo_url")" alt="@ViewService.site_title()" />
+                }
             </a>
             <div class="navbar-menu">
                 <a href="@ViewService.site_url("/archives")">归档</a>
@@ -76,25 +77,25 @@
                 <div class="social-list">
                     @if (!ViewService.theme_option("social_weibo").IsNullOrWhiteSpace())
                     {
-                    <a class="social weibo" target="blank" href="http://weibo.com/@ViewService.theme_option("social_weibo")">微博</a>
+                        <a class="social weibo" target="blank" href="http://weibo.com/@ViewService.theme_option("social_weibo")">微博</a>
                     }
 
                     @if (!ViewService.theme_option("social_zhihu").IsNullOrWhiteSpace())
                     {
-                    <a class="social zhihu" target="blank" href="https://www.zhihu.com/people/@ViewService.theme_option("social_zhihu")">知乎</a>
+                        <a class="social zhihu" target="blank" href="https://www.zhihu.com/people/@ViewService.theme_option("social_zhihu")">知乎</a>
                     }
 
                     <a class="social rss" target="blank" href="/feed">RSS</a>
 
                     @if (!ViewService.theme_option("social_github").IsNullOrWhiteSpace())
                     {
-                    <a class="social github" target="blank"
-                       href="https://github.com/@ViewService.theme_option("social_github")">Github</a>
+                        <a class="social github" target="blank"
+                           href="https://github.com/@ViewService.theme_option("social_github")">Github</a>
                     }
 
                     @if (!ViewService.theme_option("social_twitter").IsNullOrWhiteSpace())
                     {
-                    <a class="social twitter" target="blank" href="https://twitter.com/@ViewService.theme_option("social_twitter")">Twitter</a>
+                        <a class="social twitter" target="blank" href="https://twitter.com/@ViewService.theme_option("social_twitter")">Twitter</a>
                     }
                 </div>
             </div>
@@ -139,100 +140,100 @@
     </footer>
     @if (ViewService.is_post)
     {
-    <div id="directory-content" class="directory-content">
-        <div id="directory"></div>
-    </div>
-    <script>
-        $('#directory').html('');
-        var postDirectoryBuild = function () {
-            var postChildren = function children(childNodes, reg) {
-                var result = [],
-                    isReg = typeof reg === 'object',
-                    isStr = typeof reg === 'string',
-                    node, i, len;
-                for (i = 0, len = childNodes.length; i < len; i++) {
-                    node = childNodes[i];
-                    if ((node.nodeType === 1 || node.nodeType === 9) &&
-                        (!reg ||
-                            isReg && reg.test(node.tagName.toLowerCase()) ||
-                            isStr && node.tagName.toLowerCase() === reg)) {
-                        result.push(node);
-                    }
-                }
-                return result;
-            },
-                createPostDirectory = function (article, directory, isDirNum) {
-                    var contentArr = [],
-                        titleId = [],
-                        levelArr, root, level,
-                        currentList, list, li, link, i, len;
-                    levelArr = (function (article, contentArr, titleId) {
-                        var titleElem = postChildren(article.childNodes, /^h\d$/),
-                            levelArr = [],
-                            lastNum = 1,
-                            lastRevNum = 1,
-                            count = 0,
-                            guid = 1,
-                            id = 'directory' + (Math.random() + '').replace(/\D/, ''),
-                            lastRevNum, num, elem;
-                        while (titleElem.length) {
-                            elem = titleElem.shift();
-                            contentArr.push(elem.innerHTML);
-                            num = +elem.tagName.match(/\d/)[0];
-                            if (num > lastNum) {
-                                levelArr.push(1);
-                                lastRevNum += 1;
-                            } else if (num === lastRevNum ||
-                                num > lastRevNum && num <= lastNum) {
-                                levelArr.push(0);
-                                lastRevNum = lastRevNum;
-                            } else if (num < lastRevNum) {
-                                levelArr.push(num - lastRevNum);
-                                lastRevNum = num;
-                            }
-                            count += levelArr[levelArr.length - 1];
-                            lastNum = num;
-                            elem.id = elem.id || (id + guid++);
-                            titleId.push(elem.id);
+        <div id="directory-content" class="directory-content">
+            <div id="directory"></div>
+        </div>
+        <script>
+            $('#directory').html('');
+            var postDirectoryBuild = function () {
+                var postChildren = function children(childNodes, reg) {
+                    var result = [],
+                        isReg = typeof reg === 'object',
+                        isStr = typeof reg === 'string',
+                        node, i, len;
+                    for (i = 0, len = childNodes.length; i < len; i++) {
+                        node = childNodes[i];
+                        if ((node.nodeType === 1 || node.nodeType === 9) &&
+                            (!reg ||
+                                isReg && reg.test(node.tagName.toLowerCase()) ||
+                                isStr && node.tagName.toLowerCase() === reg)) {
+                            result.push(node);
                         }
-                        if (count !== 0 && levelArr[0] === 1) levelArr[0] = 0;
+                    }
+                    return result;
+                },
+                    createPostDirectory = function (article, directory, isDirNum) {
+                        var contentArr = [],
+                            titleId = [],
+                            levelArr, root, level,
+                            currentList, list, li, link, i, len;
+                        levelArr = (function (article, contentArr, titleId) {
+                            var titleElem = postChildren(article.childNodes, /^h\d$/),
+                                levelArr = [],
+                                lastNum = 1,
+                                lastRevNum = 1,
+                                count = 0,
+                                guid = 1,
+                                id = 'directory' + (Math.random() + '').replace(/\D/, ''),
+                                lastRevNum, num, elem;
+                            while (titleElem.length) {
+                                elem = titleElem.shift();
+                                contentArr.push(elem.innerHTML);
+                                num = +elem.tagName.match(/\d/)[0];
+                                if (num > lastNum) {
+                                    levelArr.push(1);
+                                    lastRevNum += 1;
+                                } else if (num === lastRevNum ||
+                                    num > lastRevNum && num <= lastNum) {
+                                    levelArr.push(0);
+                                    lastRevNum = lastRevNum;
+                                } else if (num < lastRevNum) {
+                                    levelArr.push(num - lastRevNum);
+                                    lastRevNum = num;
+                                }
+                                count += levelArr[levelArr.length - 1];
+                                lastNum = num;
+                                elem.id = elem.id || (id + guid++);
+                                titleId.push(elem.id);
+                            }
+                            if (count !== 0 && levelArr[0] === 1) levelArr[0] = 0;
 
-                        return levelArr;
-                    })(article, contentArr, titleId);
-                    currentList = root = document.createElement('ul');
-                    dirNum = [0];
-                    for (i = 0, len = levelArr.length; i < len; i++) {
-                        level = levelArr[i];
-                        if (level === 1) {
-                            list = document.createElement('ul');
-                            if (!currentList.lastElementChild) {
-                                currentList.appendChild(document.createElement('li'));
+                            return levelArr;
+                        })(article, contentArr, titleId);
+                        currentList = root = document.createElement('ul');
+                        dirNum = [0];
+                        for (i = 0, len = levelArr.length; i < len; i++) {
+                            level = levelArr[i];
+                            if (level === 1) {
+                                list = document.createElement('ul');
+                                if (!currentList.lastElementChild) {
+                                    currentList.appendChild(document.createElement('li'));
+                                }
+                                currentList.lastElementChild.appendChild(list);
+                                currentList = list;
+                                dirNum.push(0);
+                            } else if (level < 0) {
+                                level *= 2;
+                                while (level++) {
+                                    if (level % 2) dirNum.pop();
+                                    currentList = currentList.parentNode;
+                                }
                             }
-                            currentList.lastElementChild.appendChild(list);
-                            currentList = list;
-                            dirNum.push(0);
-                        } else if (level < 0) {
-                            level *= 2;
-                            while (level++) {
-                                if (level % 2) dirNum.pop();
-                                currentList = currentList.parentNode;
-                            }
+                            dirNum[dirNum.length - 1]++;
+                            li = document.createElement('li');
+                            link = document.createElement('a');
+                            link.href = '#' + titleId[i];
+                            link.innerHTML = !isDirNum ? contentArr[i] :
+                                dirNum.join('.') + ' ' + contentArr[i];
+                            li.appendChild(link);
+                            currentList.appendChild(li);
                         }
-                        dirNum[dirNum.length - 1]++;
-                        li = document.createElement('li');
-                        link = document.createElement('a');
-                        link.href = '#' + titleId[i];
-                        link.innerHTML = !isDirNum ? contentArr[i] :
-                            dirNum.join('.') + ' ' + contentArr[i];
-                        li.appendChild(link);
-                        currentList.appendChild(li);
-                    }
-                    directory.appendChild(root);
-                };
-            createPostDirectory(document.getElementById('post-content'), document.getElementById('directory'), true);
-        };
-        postDirectoryBuild();
-    </script>
+                        directory.appendChild(root);
+                    };
+                createPostDirectory(document.getElementById('post-content'), document.getElementById('directory'), true);
+            };
+            postDirectoryBuild();
+        </script>
     }
     <script src="@ViewService.theme_url("/static/js/headroom.min.js")"></script>
     <script src="@ViewService.theme_url("/static/js/instantclick.min.js")"></script>
@@ -240,20 +241,20 @@
         hljs.initHighlightingOnLoad();
     </script>
     @if (ViewService.is_post)
-        {
-    <script>
-        var postDirectory = new Headroom(document.getElementById("directory-content"), {
-            tolerance: 0,
-            offset: 100,
-            classes: {
-                initial: "initial",
-                pinned: "pinned",
-                unpinned: "unpinned"
-            }
-        });
-    </script>
+    {
+        <script>
+            var postDirectory = new Headroom(document.getElementById("directory-content"), {
+                tolerance: 0,
+                offset: 100,
+                classes: {
+                    initial: "initial",
+                    pinned: "pinned",
+                    unpinned: "unpinned"
+                }
+            });
+        </script>
 
-        }
+    }
     <script>
 
         var header = new Headroom(document.getElementById("header"), {
