--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Categories/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Categories/Index.cshtml
@@ -29,7 +29,7 @@
                                             <a class="edit-category" v-on:click="edit(index)">修改</a>
                                         </li>
                                         <li>
-                                            <a class="del-category" v-on:click="deleteCategory(item.mid)">删除</a>
+                                            <a class="del-category" v-on:click="deleteCategory(item.id)">删除</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -49,7 +49,7 @@
                                     </button>
                                     &nbsp;
                                     <ul class="dropdown-menu" role="menu">
-                                        <li><a class="del-category" v-on:click="deleteCategory(item.mid)">删除</a></li>
+                                        <li><a class="del-category" v-on:click="deleteCategory(item.id)">删除</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -62,7 +62,7 @@
                         <div class="panel panel-default">
                             <div class="panel-body">
                                 <form id="cform" class="form-inline" role="form">
-                                    <input type="hidden" v-model="mid" />
+                                    <input type="hidden" v-model="id" />
                                     <div class="form-group">
                                         <input type="text" class="form-control" v-model="cname" placeholder="请输入分类名称">
                                     </div>
@@ -86,7 +86,7 @@
         var vm = new Vue({
             el: '#app',
             data: {
-                mid: '',
+                id: '',
                 cname: '',
                 categories: [],
                 tags: [],
@@ -104,7 +104,7 @@
                     tale.get({
                         url: '/admin/api/CategoryList',
                         success: function (data) {
-                            $vm.categories = data.payload
+                            $vm.categories = data.payload;
                         },
                         error: function (error) {
                             console.log(error);
@@ -114,7 +114,7 @@
                     tale.get({
                         url: '/admin/api/TagList',
                         success: function (data) {
-                            $vm.tags = data.payload
+                            $vm.tags = data.payload;
                         },
                         error: function (error) {
                             console.log(error);
@@ -130,11 +130,11 @@
                     }
                     tale.post({
                         url: '/admin/api/category/save',
-                        data: { mid: $vm.mid, cname: $vm.cname },
+                        data: { id: $vm.id, cname: $vm.cname },
                         success: function (result) {
                             if (result && result.success) {
                                 tale.alertOk('保存成功');
-                                $vm.mid = '';
+                                $vm.id = '';
                                 $vm.cname = '';
                                 $vm.load();
                             } else {
@@ -145,16 +145,16 @@
                 },
                 edit: function (index) {
                     var item = this.categories[index];
-                    this.mid = item.mid;
+                    this.id = item.id;
                     this.cname = item.name;
                 },
-                deleteCategory: function (mid) {
+                deleteCategory: function (id) {
                     var $vm = this;
                     tale.alertConfirm({
                         title: '确定删除该项吗?',
                         then: function () {
                             tale.post({
-                                url: '/admin/api/category/delete/' + mid,
+                                url: '/admin/api/category/delete/' + id,
                                 success: function (result) {
                                     if (result && result.success) {
                                         tale.alertOk('删除成功');
