--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Article/Index.cshtml
@@ -62,7 +62,7 @@
                                                class="btn btn-primary btn-sm waves-effect waves-light m-b-5">
                                                 <i class="fa fa-edit"></i> <span>编辑</span>
                                             </a>
-                                            <a click="deleteArticle(item.id)" href="javascript:void(0)"
+                                            <a v-on:click="deleteArticle(item.id)" href="javascript:void(0)"
                                                class="btn btn-danger btn-sm waves-effect waves-light m-b-5">
                                                 <i class="fa fa-trash-o"></i> <span>删除</span>
                                             </a>
