--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Layout/Layout.cshtml
@@ -45,12 +45,12 @@
             <div class="topbar-left">
                 <div class="text-center p-t-10" style="margin: 0 auto;">
                     <div class="pull-left" style="padding-left: 10px;">
-                        <a href="/admin/index">
+                        <a href="/admin">
                             <img src="/static/admin/images/unicorn.png" width="50" height="50" />
                         </a>
                     </div>
                     <div class="pull-left admin-title" style="padding-left: 10px;">
-                        <span style="font-size: 28px; color: #2f353f; line-height: 50px;">Tale Blog</span>
+                        <span style="font-size: 28px; color: #2f353f; line-height: 50px;">iBlogs</span>
                     </div>
                 </div>
             </div>
@@ -117,25 +117,33 @@
                                 <i class="fa fa-cloud-upload" aria-hidden="true"></i><span> 文件管理 </span>
                             </a>
                         </li>
+                        
+                        <li @(ViewService.active == "categories" ? "active" : "")>
+                            <a href="/admin/categories" class="waves-effect @(ViewService.active=="categories"?"active":"")">
+                                <i class="fa fa-tags"
+                                   aria-hidden="true"></i><span> 分类/标签 </span>
+                            </a>
+                        </li>
+                        
+                        <li @(ViewService.active == "comments" ? "active" : "")>
+                            <a href="/admin/comments" class="waves-effect @(ViewService.active=="comments"?"active":"")">
+                                <i class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span>
+                            </a>
+                        </li>
 
                         <li class="has_sub">
                             <a href="javascript:void(0)" class="waves-effect @(ViewService.has_sub=="other"?"active subdrop":"")">
-                                <i class="fa fa-cubes"></i><span> 其他管理 </span><span class="pull-right">
+                                <i class="fa fa-cubes"></i><span> 外观设置 </span><span class="pull-right">
                                     <i class="fa fa-plus"></i>
                                 </span>
                             </a>
                             <ul class="list-unstyled">
-                                <li @(ViewService.active == "comments" ? "active" : "")>
-                                    <a href="/admin/comments" class="waves-effect @(ViewService.active=="comments"?"active":"")">
-                                        <i class="fa fa-comments" aria-hidden="true"></i><span> 评论管理 </span>
+                                <li @(ViewService.active == "themes" ? "active" : "")>
+                                    <a href="/admin/themes" class="waves-effect @(ViewService.active=="themes"?"active":"")">
+                                        <i class="fa fa-diamond" aria-hidden="true"></i><span> 主题设置 </span>
                                     </a>
                                 </li>
-                                <li @(ViewService.active == "categories" ? "active" : "")>
-                                    <a href="/admin/categories" class="waves-effect @(ViewService.active=="categories"?"active":"")">
-                                        <i class="fa fa-tags"
-                                           aria-hidden="true"></i><span> 分类/标签 </span>
-                                    </a>
-                                </li>
+
                                 <li @(ViewService.active == "template" ? "active" : "")>
                                     <a href="/admin/template" class="waves-effect @(ViewService.active=="template"?"active":"")">
                                         <i class="fa fa-hashtag"></i><span> 编辑模板 </span>
@@ -143,13 +151,6 @@
                                 </li>
                             </ul>
                         </li>
-
-                        <li @(ViewService.active == "themes" ? "active" : "")>
-                            <a href="/admin/themes" class="waves-effect @(ViewService.active=="themes"?"active":"")">
-                                <i class="fa fa-diamond" aria-hidden="true"></i><span> 主题设置 </span>
-                            </a>
-                        </li>
-
                         <li @(ViewService.active == "setting" ? "active" : "")>
                             <a href="/admin/setting" class="waves-effect @(ViewService.active=="setting"?"active":"")">
                                 <i class="fa fa-gear" aria-hidden="true"></i><span> 系统设置 </span>
@@ -166,7 +167,7 @@
                 <div class="container">
                     @RenderBody()
                     <footer class="footer text-right">
-                        2017 © <a href="https://github.com/biezhi" target="_blank">Tale</a>.
+                        2019 © <a href="https://github.com/liuzhenyulive/iBlogs" target="_blank">iBlogs</a>.
                     </footer>
                 </div>
             </div>
