--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Home/Index.cshtml
@@ -1,8 +1,6 @@
 ﻿@using iBlogs.Site.Core.Common
 @using iBlogs.Site.Core.Common.Service
 @inject IViewService ViewService
-@*@(ViewService.active="home")
-    @(ViewService.title="管理中心")*@
 @section scripts
 {
     <script>
@@ -100,14 +98,14 @@
     <div class="col-lg-12">
         <div class="panel panel-primary">
             <div class="panel-heading">
-                <h3 class="panel-title">Tale仪表盘</h3>
+                <h3 class="panel-title">仪表盘</h3>
             </div>
             <div class="panel-body">
 
                 <div class="row">
                     <div class="col-md-4">
                         <div class="mini-stat clearfix bx-shadow bg-info">
-                            <a href="/admin/articles" class="text-white">
+                            <a href="/admin/article" class="text-white">
                                 <span class="mini-stat-icon"><i class="fa fa-quote-right" aria-hidden="true"></i></span>
                             </a>
                             <div class="mini-stat-info text-right">
