--- a/src/iBlogs.Site.Web/Areas/Admin/Views/Profile/Index.cshtml
+++ b/src/iBlogs.Site.Web/Areas/Admin/Views/Profile/Index.cshtml
@@ -31,12 +31,13 @@
                     <div class="form-group">
                         <label class="col-md-3 control-label">邮箱</label>
                         <div class="col-md-9">
-                            <input type="text" class="form-control" name="email" placeholder="输入您的邮箱"
+                            <input type="email" class="form-control" name="email" placeholder="输入您的邮箱"
                                    value="@UserService.CurrentUsers.Email" required aria-required="true" />
                         </div>
                     </div>
+
                     <div class="clearfix pull-right">
-                        <button type="button" class="btn btn-primary waves-effect waves-light" onclick="saveSetting()">
+                        <button type="submit" class="btn btn-primary waves-effect waves-light">
                             保存信息
                         </button>
                     </div>
@@ -92,20 +93,22 @@
         /**
          * 保存个人信息
          */
-        function saveSetting() {
-            var param = $('#user-form').serialize();
-            tale.post({
-                url: '/admin/profile/info',
-                data: param,
-                success: function (result) {
-                    if (result && result.success) {
-                        tale.alertOk('保存成功');
-                    } else {
-                        tale.alertError(result.msg || '保存失败');
+        $('#user-form').validate({
+            submitHandler: function (form) {
+                var param = $("#user-form").serialize();
+                tale.post({
+                    url: '/admin/profile/info',
+                    data: param,
+                    success: function (result) {
+                        if (result && result.success) {
+                            tale.alertOk('保存成功');
+                        } else {
+                            tale.alertError(result.msg || '保存失败');
+                        }
                     }
-                }
-            });
-        }
+                });
+            }
+        });
 
         $('#pwd-form').validate({
             submitHandler: function (form) {
