--- a/src/iBlogs.Site.Web/Views/Article/Index.cshtml
+++ b/src/iBlogs.Site.Web/Views/Article/Index.cshtml
@@ -76,7 +76,7 @@
                 <span class="response">评论已关闭.</span>
             }
 
-            @if (comments.Rows.Count > 0)
+            @if (comments?.Rows.Count > 0)
             {
                 <ol class="comment-list">
                     @foreach (var comment in comments.Rows)
@@ -142,29 +142,31 @@
                     }
                 </ol>
             }
-
-            <div class="lists-navigator clearfix">
-                <ol class="page-navigator">
-                    @if (comments.HasPrevPage)
-                    {
-                        <li class="prev"><a href="?cp=@comments.PrevPage#comments">←</a></li>
-                    }
-
-
-                    @foreach (var navIndex in comments.NavPageNums)
-                    {
-                        <li class="@((comments.PageNum==navIndex)?"current":"")"><a href="?cp=@navIndex#comments">@navIndex</a></li>
-                    }
+            
+            @if (comments != null)
+            {
+                <div class="lists-navigator clearfix">
+                    <ol class="page-navigator">
+                        @if (comments.HasPrevPage)
+                        {
+                            <li class="prev"><a href="?cp=@comments.PrevPage#comments">←</a></li>
+                        }
 
 
-                    @if (comments.HasNextPage)
-                    {
-                        <li class="next"><a href="?cp=@comments.NextPage#comments">→</a></li>
-                    }
-                </ol>
+                        @foreach (var navIndex in comments.NavPageNums)
+                        {
+                            <li class="@((comments.PageNum==navIndex)?"current":"")"><a href="?cp=@navIndex#comments">@navIndex</a></li>
+                        }
 
-            </div>
-            #end
+
+                        @if (comments.HasNextPage)
+                        {
+                            <li class="next"><a href="?cp=@comments.NextPage#comments">→</a></li>
+                        }
+                    </ol>
+
+                </div>
+            }
         </div>
     </div>
 
