--- a/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
+++ b/src/iBlogs.Site.Web/Views/Layout/Layout.cshtml
@@ -14,8 +14,8 @@
     <meta name="keywords" content="@ViewService.MetaKeywords()" />
     <meta name="description" content="@ViewService.MetaDescription()" />
     <meta content="${_csrf_token}" name="csrf_token" />
-    <link href="./css/app.css" rel="stylesheet">
-    <link href="./css/topstory-routes.css" rel="stylesheet">
+    <link href="/css/app.css" rel="stylesheet">
+    <link href="/css/topstory-routes.css" rel="stylesheet">
     <link rel="shortcut icon" href="@ViewService.ThemeUrl("/static/img/favicon.png")" />
     <link rel="apple-touch-icon" href="@ViewService.ThemeUrl("/static/img/apple-touch-icon.png")" />
     <title>@(ViewData["title"]??"iBlogs")</title>
